fixed spacing on td's

--- a/src/App.css
+++ b/src/App.css
@@ -80,3 +80,6 @@ html {
   }
 }
 
+td {
+  padding: 10px;
+}
